# null

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
config/: defaults.yaml  sources.example.yaml
deploy/: prometheus.yml
docs/: README.md
docs/technical/: README.md  architecture.md  data-model.md  design-decisions.md  observability.md  plugin-sdk.md  replay.md  security.md
docs/tutorials/: 01-getting-started.md  02-add-a-source.md  03-write-a-plugin.md  README.md
docs/user-guide/: README.md  api-reference.md  cli-reference.md  configuration.md  installation.md  operations.md  troubleshooting.md
migrations/: env.py
migrations/versions/: 0001_initial.py
secrets/: api_tokens.example.yaml
src/cti/: __init__.py  __main__.py
src/cti/cli/: app.py
src/cti/cli/commands/: api.py  backfill.py  config_cmd.py  db.py  dlq.py  plugins.py  replay.py  run_once.py  scheduler.py  sources.py  worker.py
src/cti/config/: __init__.py  loader.py  schema.py  secrets.py
src/cti/core/: __init__.py  enums.py  errors.py  hashing.py  interfaces.py  models.py  pipeline.py  queue.py  ratelimit.py
src/cti/core/stages/: __init__.py  dedup.py  enrich.py  fetch.py  normalize.py  parse.py  persist.py  publish.py
src/cti/manager/: __init__.py  circuit_breaker.py  concurrency.py  deadletter.py  registry.py  retry.py  runner.py  scheduler.py  state.py  worker.py
src/cti/obs/: __init__.py  auth.py  http_app.py  logging.py  metrics.py  tracing.py
src/cti/persistence/: __init__.py  db.py  models.py  partitioning.py  repositories.py
src/cti/plugins/: __init__.py  builder.py  loader.py
src/cti/plugins/connectors/: http_base.py  http_csv.py  http_json.py  http_txt_lines.py
src/cti/plugins/enrichers/: allowlist.py  asn.py  defang.py  geoip.py
src/cti/plugins/parsers/: csv_parser.py  json_parser.py  txt_extractor.py
src/cti/plugins/publishers/: kafka.py  postgres.py  webhook.py
src/cti/security/: __init__.py  archive.py  egress.py  tlp.py
tests/: conftest.py
tests/contract/: test_plugins.py
tests/fixtures/: sample_urlhaus.csv
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_circuit_breaker.py  test_egress.py  test_enrichers.py  test_hashing.py  test_models.py  test_normalize.py  test_parsers.py  test_ratelimit.py  test_registry.py  test_secrets.py
