[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cti"
version = "0.1.0"
description = "Cyber Threat Intelligence data ingestion framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "BeyondRoot IT" }]
dependencies = [
  "httpx[http2]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "typer>=0.12",
  "apscheduler>=3.10,<4",
  "arq>=0.26",
  "redis>=5.0",
  "pyyaml>=6.0",
  "tenacity>=8.3",
  "tldextract>=5.1",
  "starlette>=0.37",
  "uvicorn>=0.30",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "testcontainers[postgres,redis]>=4.5",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-pyyaml",
]
geoip = ["maxminddb>=2.6"]
kafka = ["aiokafka>=0.11"]

[project.scripts]
cti = "cti.cli.app:main"

[project.entry-points."cti.connectors"]
http_csv = "cti.plugins.connectors.http_csv:HttpCsvConnector"
http_json = "cti.plugins.connectors.http_json:HttpJsonConnector"
http_txt_lines = "cti.plugins.connectors.http_txt_lines:HttpTxtLinesConnector"

[project.entry-points."cti.parsers"]
csv = "cti.plugins.parsers.csv_parser:CsvParser"
json = "cti.plugins.parsers.json_parser:JsonParser"
txt = "cti.plugins.parsers.txt_extractor:TxtExtractor"

[project.entry-points."cti.enrichers"]
defang = "cti.plugins.enrichers.defang:DefangEnricher"
allowlist = "cti.plugins.enrichers.allowlist:AllowlistEnricher"
geoip = "cti.plugins.enrichers.geoip:GeoIpEnricher"
asn = "cti.plugins.enrichers.asn:AsnEnricher"

[project.entry-points."cti.publishers"]
postgres = "cti.plugins.publishers.postgres:PostgresPublisher"
webhook = "cti.plugins.publishers.webhook:WebhookPublisher"
kafka = "cti.plugins.publishers.kafka:KafkaPublisher"

[tool.hatch.build.targets.wheel]
packages = ["src/cti"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["integration: spins testcontainers"]

[tool.coverage.run]
source = ["src/cti"]
branch = true
